--- a/brooklyn-source/index.html
+++ b/brooklyn-source/index.html
@@ -14,6 +14,52 @@
 
 <body>
 	<div id="container">
+		<div id="logo"><img src="images/brook-and-lyn-logo.gif"/></div>
+		<div class="content"><img src="images/home-bloghero.png"/></div>
+		<div class="content"><img src="images/home-rings.png"/></div>
+
+		<h2>Our Latest Collection</h2>
+
+			<h5>May 25, 2012</h5>
+
+			<p>
+				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences.
+				<!--I didn't know VCs were into copy and fashion-->
+			</p>
+
+			<p>
+				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences. <a href="No latin here">Read More...</a>
+			</p>
+		</div>
+
+		<div id="first_left" class="press">
+			<div class="inner">
+				<a href="#">
+					<img src="images/press-nbcnewyork.gif"/>
+				</a>
+			</div>
+		</div>
+		<div class="press">
+			<div class="inner">
+				<a href="#">
+					<img src="images/press-huffpost.gif"/>
+				</a>
+			</div>
+		</div>
+		<div class="press">
+			<div class="inner"> 
+				<a href="#">
+					<img src="images/press-marieclaire.gif"/>
+				</a>
+			</div>
+		</div>
+		<div class="press">
+			<div class="inner"> 
+				<a href="#">
+					<img src="images/press-logo_lucky.gif"/>
+				</a>
+			</div>
+		</div>
 
 
 	</div><!-- #container --> 
