Styling minus font colo

--- a/brooklyn-source/index.html
+++ b/brooklyn-source/index.html
@@ -22,45 +22,47 @@
 
 			<h5>May 25, 2012</h5>
 
-			<p>
+			<p class="copy">
 				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences.
 				<!--I didn't know VCs were into copy and fashion-->
 			</p>
-
-			<p>
+			<p class="copy">
 				Quickly re-engineer business growth strategies with sustainable web-readiness. Collaboratively create visionary growth strategies vis-a-vis cooperative functionalites. Holisticly extend cross-media technologies rather than cutting-edge experiences. <a href="No latin here">Read More...</a>
 			</p>
 		</div>
 
-		<div id="first_left" class="press">
+		<div id="first_left" class="lookatme">
 			<div class="inner">
-				<a href="#">
+				<a href="No latin here">
 					<img src="images/press-nbcnewyork.gif"/>
 				</a>
 			</div>
 		</div>
-		<div class="press">
+		<div class="lookatme">
 			<div class="inner">
-				<a href="#">
+				<a href="No latin here">
 					<img src="images/press-huffpost.gif"/>
 				</a>
 			</div>
 		</div>
-		<div class="press">
+		<div class="lookatme">
 			<div class="inner"> 
-				<a href="#">
+				<a href="No latin here">
 					<img src="images/press-marieclaire.gif"/>
 				</a>
 			</div>
 		</div>
-		<div class="press">
+		<div class="lookatme">
 			<div class="inner"> 
-				<a href="#">
+				<a href="No latin here">
 					<img src="images/press-logo_lucky.gif"/>
 				</a>
 			</div>
 		</div>
 
+		<div id="copyright">
+			<p> Copyright 1999 </p>
+		</div>
 
 	</div><!-- #container --> 
 </body>
